--- a/index.html
+++ b/index.html
@@ -5,7 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio-1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&family=Poppins&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+  <section class="top-banner"> <div class="half-width"> <h1>Welcome to</h1>
+    <h1><span>Marjan's Art</span> Gallery!</h1>
+    <h3>Mehedi Design</h3>
+    <p>
+      Simple & Easy Mehndi Designs Images: are often popular among the women and
+      girls on Traditional Days and Diwali, Eid, Weddings, and Indian normal
+      celebrations. These types of provides include simple mehndi designs for
+      the left hand with mehndi, where the designers create the best henna
+      mehndi Cone and Cream.
+    </p>
+      <a class="link-button"href="https://www.linkedin.com/in/bibi-marjan-33a831204/"target="blank">Hire me</a>
+    </div>
+    <div class="half-width"><img src="images/marjan.png" alt="image" />
+    </div></section>
 </html>
