--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-  <section class="top-banner"> <div class="half-width"> <h1>Welcome to</h1>
-    <h1><span>Marjan's Art</span> Gallery!</h1>
+  <section class="top-banner"> 
+
+      <div class="half-width">
+     <h1>Welcome to</h1>
+    <h1><span class="art">Marjan's Art</span> Gallery!</h1>
     <h3>Mehedi Design</h3>
     <p>
       Simple & Easy Mehndi Designs Images: are often popular among the women and
@@ -26,6 +29,7 @@
     </p>
       <a class="link-button"href="https://www.linkedin.com/in/bibi-marjan-33a831204/"target="blank">Hire me</a>
     </div>
+    
     <div class="half-width"><img src="images/marjan.png" alt="image" />
     </div></section>
 </html>
