--- a/index.html
+++ b/index.html
@@ -29,7 +29,21 @@
     </p>
       <a class="link-button"href="https://www.linkedin.com/in/bibi-marjan-33a831204/"target="blank">Hire me</a>
     </div>
-    
     <div class="half-width"><img src="images/marjan.png" alt="image" />
     </div></section>
+    <section class="drm">
+        <div class="half-width">
+            <img src="images/my-bg2.png" alt="pic">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a Web Developer</h2>
+            <p>Learn HTML
+                Get started as a web developer by learning the basics of HTML, the essential language of the web.
+                Styling a Website. Learn and practice the fundamentals of CSS to add beautiful styling to your webpages.
+                Getting Started with JavaScript. Learn the fundamentals of JavaScript: syntax, variables, conditionals, and functions.
+            </p>
+            <a class="link-button"href="https://www.linkedin.com/in/bibi-marjan-33a831204/"target="_blank">Download Resme</a>
+        </div>
+    </section>
 </html>
