--- a/images/h1.html
+++ b/images/h1.html
@@ -15,9 +15,9 @@
   </head>
   <body>
     <section class="top-banner">
-      <div>
+      <div class="half">
         <h1>Welcome to</h1>
-        <h1>Marjan's Art Gallery!</h1>
+        <h1><span class="org">Marjan's Art</span> Gallery!</h1>
         <h3>Mehedi Design</h3>
         <p>
           Simple & Easy Mehndi Designs Images: are often popular among the women
@@ -29,9 +29,10 @@
         <a
           href="https://www.linkedin.com/in/bibi-marjan-33a831204/"
           target="blank"
-        ></a>
+          >Hire me</a
+        >
       </div>
-      <div>
+      <div class="half">
         <img src="marjan.png" alt="pic" />
       </div>
     </section>
