--- a/images/h1.html
+++ b/images/h1.html
@@ -36,5 +36,9 @@
         <img src="marjan.png" alt="pic" />
       </div>
     </section>
+    <section class="drm">
+      <h1>Dream Big</h1>
+      <h3></h3>
+    </section>
   </body>
 </html>
