--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-  <section class="top-banner"> 
+  <section class="top-banner flexible-container"> 
 
       <div class="half-width">
      <h1>Welcome to</h1>
@@ -31,7 +31,7 @@
     </div>
     <div class="half-width"><img src="images/marjan.png" alt="image" />
     </div></section>
-    <section class="drm">
+    <section class="drm flexible-container">
         <div class="half-width">
             <img src="images/my-bg2.png" alt="pic">
         </div>
@@ -46,4 +46,34 @@
             <a class="link-button"href="https://www.linkedin.com/in/bibi-marjan-33a831204/"target="_blank">Download Resme</a>
         </div>
     </section>
+    <section class="exp">
+        <h1>Experience</h1>
+        <div class="flexible-container">
+            <div id="web1"class="exp-item">
+                <h2>
+                Full Web Developer
+    
+                </h1>           
+                 <h3 class="art">2022-Present | Not Pro Level Developer</h3>
+                <p>Onday I will be master of HTML,CSS & JAVASCRIPT.I didn't stop with the web.
+    
+                </p>
+            </div>
+            <div id="web2"class="exp-item">
+                <h2 >
+                    Baby Web Developer
+                </h1>     
+                <h3 class="art">2022-2024 | HERO LEARNER Developer.</h3>
+                <p>
+                    I made myself 
+                    a web learner developer. I made their website and showed it to them. They liked it. And uploaded the content. Really it was fun.
+                </p>
+               </div>
+        </div>
+
+    </section>
+    <footer>
+        <p>© Peter Parker 2023 , a Programming Hero initiative.</p>
+    </footer>
+    </body>
 </html>
