--- a/images/h1.html
+++ b/images/h1.html
@@ -15,30 +15,43 @@
   </head>
   <body>
     <section class="top-banner">
-      <div class="half">
-        <h1>Welcome to</h1>
-        <h1><span class="org">Marjan's Art</span> Gallery!</h1>
-        <h3>Mehedi Design</h3>
+      <div class="hw">
+        <h1>Welcome To</h1>
+        <h2><span class="art">Marjan's Art</span> Gallery</h2>
+        <h3>A Dedicated Web Developer</h3>
         <p>
-          Simple & Easy Mehndi Designs Images: are often popular among the women
-          and girls on Traditional Days and Diwali, Eid, Weddings, and Indian
-          normal celebrations. These types of provides include simple mehndi
-          designs for the left hand with mehndi, where the designers create the
-          best henna mehndi Cone and Cream.
+          It's me Marjan.I want to be a web-developer. This is my first
+          Portfolio.I am learning web-development.I will not stop until I become
+          the web development hero.
         </p>
         <a
           href="https://www.linkedin.com/in/bibi-marjan-33a831204/"
-          target="blank"
+          class="link"
+          target="-blank"
           >Hire me</a
         >
       </div>
-      <div class="half">
-        <img src="marjan.png" alt="pic" />
+      <div class="hw">
+        <img src="marjan.png" alt="image" />
       </div>
     </section>
-    <section class="drm">
-      <h1>Dream Big</h1>
-      <h3></h3>
+    <section class="top">
+      <div class="hw">
+        <img src="my-bg2.png" alt="img" />
+      </div>
+      <div class="hw">
+        <h1>Dream Big</h1>
+        <h2>Become A Web Developer!!</h2>
+        <p>
+          I already learned the basic HTML & CSS.I can build any simple
+          website.My goal is build 3 websites and learned advanced topics.
+        </p>
+        <a
+          href="https://github.com/Marjan34/portfolio-1/commits/main"
+          class="link"
+          >Download resume</a
+        >
+      </div>
     </section>
   </body>
 </html>
