--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     </p>
       <a class="link-button"href="https://www.linkedin.com/in/bibi-marjan-33a831204/"target="blank">Hire me</a>
     </div>
-    <div class="half-width"><img src="images/marjan.png" alt="image" />
+    <div class="half-width"><img src="images/marjan1.png" alt="image" />
     </div></section>
     <section class="drm flexible-container">
         <div class="half-width">
-            <img src="images/my-bg2.png" alt="pic">
+            <img src="images/marjan2.png" alt="pic">
         </div>
         <div class="half-width">
             <h1>Dream Big</h1>
