--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
       <div class="half-width">
      <h1>Welcome to</h1>
     <h1><span class="art">Marjan's Art</span> Gallery!</h1>
-    <h3>Mehedi Design</h3>
+    <h3></h3>
     <p>
-      Simple & Easy Mehndi Designs Images: are often popular among the women and
-      girls on Traditional Days and Diwali, Eid, Weddings, and Indian normal
-      celebrations. These types of provides include simple mehndi designs for
-      the left hand with mehndi, where the designers create the best henna
-      mehndi Cone and Cream.
+      Assalamualaykum everyone,<br>
+      It's me Marjan.I love to explore ,love to hear music etc.
+      I want to be a web-developer.May Allah fulfill my all wishes.Keep me in your prayer.
+
     </p>
       <a class="link-button"href="https://www.linkedin.com/in/bibi-marjan-33a831204/"target="blank">Hire me</a>
     </div>
